<resources>
    <string name="app_name">APNGCreator</string>

    <string name="description_viewer_imageView">Loaded Image</string>

    <string name="title_playButton">Play</string>
    <string name="title_pauseButton">Pause</string>

    <string name="menu_title_kotlin_fragment">Kotlin Fragment</string>
    <string name="menu_title_java_fragment">Java Fragment</string>
    <string name="menu_title_apng_decoder_fragment">ApngDecoder</string>

    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="set_all_duration">Set duration of all frames</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="menu_first_frame_in_anim">First frame in animation</string>
    <string name="menu_optimise">Optimise animation</string>
    <string name="add_frame">Add a frame to the animation</string>
    <string name="create_animation">Create an animation</string>
    <string name="create_notification_channel_name">Creation notifications</string>
    <string name="create_notification_channel_description">A channel used to send update about creation process</string>
    <string name="create_notification_title">Exporting animation</string>
    <plurals name="create_notification_description">
        <item quantity="one">Exporting frame %1$d out of %2$d</item>
        <item quantity="other">Exporting frames %1$d out of %2$d</item>
    </plurals>
    <string name="create_notification_description_end">Exporting complete</string>

    <string name="file_size_kB">File size is %1$d kB</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="delay">Delay (ms)</string>
</resources>
