<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_save_apng"
            android:icon="@drawable/ic_save_white_24dp"
            android:title="@string/save"
            app:showAsAction="ifRoom"
            app:iconTint="@color/control"/>

    <item
            android:id="@+id/menu_create_apng"
            android:icon="@drawable/ic_play_arrow_white_24dp"
            android:title="@string/create"
            app:showAsAction="ifRoom"
            app:iconTint="@color/control"/>

    <item
            android:id="@+id/menu_share_apng"
            android:icon="@drawable/ic_share_share_24dp"
            android:title="@string/share"
            app:showAsAction="ifRoom"
            app:iconTint="@color/control"/>

    <item
            android:id="@+id/menu_set_all_duration"
            android:icon="@drawable/ic_access_time_white_24dp"
            android:title="@string/set_all_duration"
            app:showAsAction="ifRoom"
            app:iconTint="@color/control"/>

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        app:showAsAction="never"
        app:iconTint="@color/control" />
</menu>